# cmd/api/docs/swagger.yaml
@@ -106,6 +106,8 @@ definitions:
         type: string
       faqaid:
         type: integer
+      organizername:
+        type: string
       public:
         type: boolean
       question:
@@ -536,6 +538,11 @@ paths:
         name: title
         required: true
         type: string
+      - description: Getting the title of the event
+        in: query
+        name: organizername
+        required: true
+        type: string
       - description: Post question
         in: body
         name: PostQuestion
@@ -556,6 +563,29 @@ paths:
       security:
       - BearerAuth: []
       summary: Post Question function
+      tags:
+      - User
+  /user/list/faqas:
+    get:
+      operationId: list all public faqas
+      parameters:
+      - description: 'Event title: '
+        in: query
+        name: title
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: list all Public faqas
       tags:
       - User
   /user/login:
